# Ising-Model

./: Generalizations; Phase Diagrams & Finite-Size Scaling.py  Ising Model; Glauber Rule.py  Ising Model; Metropolis Rule.py  README.md  pyproject.toml
.github/workflows/: ci.yml
