[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ising-model"
version = "0.1.0"
description = "2D Ising model Monte Carlo with phase diagrams, finite-size scaling, and hysteresis."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "cycler>=0.11",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["Ising Model; Glauber Rule.py", "Ising Model; Metropolis Rule.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "N802", "N803", "N806", "N815", "N816"]
